# dotfyls

./: .codespellrc  .envrc  .envrc-nix  .envrc.recommended  .gitignore  .pre-commit-config.yaml  .vale.ini  .zshenv  .zshrc  README.md  alias.zsh  ansible.cfg  colorscheme.lua  dotfyls.sh  flake.nix  font.lua  install.sh  keys.lua  lazy-lock.json  main.yml  remap.lua  update.sh  user-overrides.js  util.lua  wezterm.lua
commands/: fastfetch.zsh  ffmpeg.zsh  ls.zsh  nvim.zsh  zoxide.zsh
common/: completion-init.zsh  init-extra-before-comp-init.zsh  init-extra-first.zsh  init-extra.zsh
devenv/: default.nix  dotfyls-modules-home-terminals-terminals-wezterm-wezterm.nix  dotfyls-neovim.nix  dotfyls.nix
functions/: convert  distrobox-active  distrobox-inactive  distrobox-start  reload
home-manager/: default.nix  fonts.nix  graphics.nix  media.nix  persist.nix  terminal.nix
home-manager/appearance/: default.nix  fonts.nix  gtk.nix  icons.nix  qt.nix
home-manager/desktop/: default.nix
home-manager/desktops/: default.nix  gtk.nix  qt.nix
home-manager/development/: default.nix  go.nix  javascript.nix  lua.nix  python.nix  rust.nix
home-manager/media/: default.nix  gvfs.nix  mime-apps.nix  pipewire.nix
home-manager/program/: default.nix  git.nix  neovim.nix  wezterm.nix  zsh.nix
home-manager/programs/: bat.nix  cbonsai.nix  cliphist.nix  default.nix  discord.nix  dunst.nix  eza.nix  fd.nix  firefox.nix  fzf.nix  git.nix  gnome-keyring.nix  gnupg.nix  gvfs.nix  libreoffice.nix  mpris-proxy.nix  mpv.nix  nemo.nix  neovim.nix  network-manager-applet.nix  nix-index.nix  obsidian.nix  openrgb.nix  pix.nix  prismlauncher.nix  ripgrep.nix  rofi.nix  sl.nix  solaar.nix  spotify.nix  ssh.nix  starship.nix  steam.nix  swww.nix  tldr.nix  ventoy.nix  vesktop.nix  waybar.nix  wezterm.nix  wl-clipboard.nix  (+3 more)
home-manager/security/: default.nix
home-manager/shells/: bash.nix  default.nix  fish.nix  zsh.nix
home-manager/terminals/: default.nix  kitty.nix  wezterm.nix
host/: home.nix  nixos.nix
host/botworks-virtualized/: default.nix  hardware.nix  home.nix
hosts/: home.nix  nixos.nix
hosts/botworks/: default.nix  hardware.nix  home.nix
hosts/botworks-mobilized/: default.nix  hardware.nix  home.nix
hosts/botworks-pioneer/: default.nix  hardware.nix  home.nix
hosts/botworks-virtualized/: default.nix  hardware.nix  home.nix
hosts/installer/: default.nix
lib/: configuration.nix  configurations.nix  default.nix  desktops.nix  modules.nix  options.nix  paths.nix  system.nix
modules/: default.nix  files.nix
modules/home/: default.nix  graphics.nix  icon.nix  mime-apps.nix  mime-types-remaining  nix.nix  state.nix
modules/shared/: appearance_fonts.nix  default.nix  file.nix  files.nix  filesystems_drives.nix  meta.nix  nix.nix
modules/system/: default.nix  home-manager.nix  kernels.nix  localization.nix  networking.nix  nix.nix  power.nix  shells.nix  state.nix  users.nix
nixos/: audio.nix  boot.nix  configuration.nix  default.nix  desktop.nix  fonts.nix  graphics.nix  harden.nix  kernels.nix  localization.nix  media.nix  networking.nix  nix.nix  persist.nix  power.nix  program.nix  programs.nix  shells.nix  user.nix  users.nix  window-managers.nix
nixos/desktops/: locks.nix  (+2 more)
overlay/: default.nix  fastfetch-nixos-small.patch
overlays/: default.nix  nix-index-unwrapped.nix  wezterm-5264.patch
pre_tasks/: extract_xdg.yml
rc/: alias.zsh  history.zsh  plugins.zsh
scripts/: hyprsol  install  nm-radio-toggle  nrepl  pamu2fcfg  proton-forward
shells/: default.nix  dotfyls-modules-home-editors-neovim.nix  dotfyls-modules-home-files-neovim-nvim.nix  dotfyls-modules-home-terminals-wezterm.nix  dotfyls.nix
templates/: default.nix
templates/python-poetry/: .envrc.recommended  .gitignore  flake.nix  pyproject.toml
templates/python-poetry/nix/: package.nix  shell.nix
templates/python-poetry/src/project_name/: __main__.py
templates/python-uv/: .envrc.recommended  .gitignore  flake.nix  pyproject.toml
templates/python-uv/nix/: home.nix  package.nix  shell.nix
templates/rust/: .deny.toml  .envrc-nix  .gitignore  Cargo.toml  flake.nix
templates/rust-workspaces/: .envrc  .envrc.recommended  .pre-commit-config.yaml  .rustfmt.toml  .vale.ini  Cargo.toml  flake.nix  rustfmt.toml
templates/rust-workspaces/member1/: Cargo.toml
templates/rust-workspaces/member2/: Cargo.toml
templates/rust-workspaces/member3/: Cargo.toml
templates/rust-workspaces/nix/: devenv.nix  nixos.nix  package.nix  shell.nix
templates/rust/nix/: nixos.nix
(+844 files in other folders)
