[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-slug"
version = "0.0.1"
description = ""
authors = [{ name = "Xarvex" }]
readme = "README.md"
requires-python = ">=3.8,<4.0"
keywords = []
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Repository = "https://codeberg.org/xarvex/project-slug"

[project.scripts]
project-slug = "project_slug.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_slug"]

[tool.ruff]
target-version = "py38"
fix = true

[tool.ruff.format]
preview = true
