[workspace]
resolver = "2"
members = [
    "member1",
    "member2",
    "member3",
]

[workspace.package]
version = "0.0.1"
authors = ["Xarvex"]
edition = "2021"
rust-version = "1.76.0" # cargo-msrv on 2024-09-14
description = "Rust with Cargo workspaces"
repository = "https://gitlab.com/xarvex"

[workspace.dependencies]
memberX = { path = "memberX" }

[profile.release]
opt-level = 3
strip = true
lto = true
