[workspace]
resolver = "2"
members = ["member1", "member2", "member3"]

[workspace.package]
version = "0.0.1"
authors = ["Xarvex"]
license-file = "LICENSE"
edition = "2024"
rust-version = "1.85.1"  # cargo-msrv on 2025-08-28

description = "Rust with Cargo workspaces"
repository = "https://codeberg.org/xarvex/project-slug"

[workspace.dependencies]
memberX = { path = "memberX" }

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
