[package]
name = "project-slug"
version = "0.0.1"
authors = ["Xarvex"]
edition = "2024"
rust-version = "1.85.1" # cargo-msrv on 2025-08-28

description = "Rust"
repository = "https://codeberg.org/xarvex/project-slug"

[dependencies]

[build-dependencies]

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
